--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,10 @@
 <resources>
 
     <style name="Theme.Quotify" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Quotify.XML" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here -->
+    </style>
+    <style name="Theme.Quotify.Material.Theme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Customize your Material theme here -->
+    </style>
 </resources>
